Solve flex-wrap bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
     margin: 0 auto;
     max-width: 1200px;
     width: 100%;
-    flex-wrap: wrap;
 }
 
 .row {
@@ -21,6 +20,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
@@ -100,6 +100,10 @@
 }
 
 
+.logo {
+  font-family: 'Mr Bedfort', cursive;
+}
+
 .top-image {
   margin: 0 auto;
   width: 100%;
@@ -136,4 +140,31 @@
 
 a {
   color: #747704;
+}
+
+
+
+@media all and (max-width: 900px) {
+  .col-4 {
+    width: 40%;
+  }
+
+  .projects {
+    margin-bottom: 1.5em;
+  }
+}
+
+
+@media all and (max-width: 520px) {
+  .col-4 {
+    width: 100%;
+  }
+
+  .col-6 {
+    width: 100%;
+  }
+
+  .artist {
+    text-align: left;
+  }
 }
